working on the experience_profile.html template. Added js files for image gallery animation. Still having some problems figuring out how to link the images from S3

--- a/xperiences/templates/base.html
+++ b/xperiences/templates/base.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/reset.css" type="text/css" media="screen, print" /> 
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" type="text/css" media="screen, print" /> 
 <title>{% block title %}Book meals with people from around your city. Learn new dishes and share with your friends. Order homemade takeout.!{% endblock %}</title>
-<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js'></script>
+<script src="js/lib/jquery-1.7.min.js"></script>
+<script src="js/lib/main.js"></script>
 <!--[if !IE 7]>
 	<style type="text/css">
 		#wrap {display:table;height:100%}
