--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -23,7 +23,7 @@
                             <p class="listing-price">
                                 <span class="currency-symbol">$</span>
                                 {{ experience.price }}
-                                <span class="currency-code">USD</span>
+                                <span class="currency-code"></span>
                             </p>
                         </div>
                     </li>
