--- a/xperiences/templates/base.html
+++ b/xperiences/templates/base.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/reset.css" type="text/css" media="screen, print" /> 
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" type="text/css" media="screen, print" /> 
 <title>{% block title %}Book meals with people from around your city. Learn new dishes and share with your friends. Order homemade takeout.!{% endblock %}</title>
-<script src="js/lib/jquery-1.7.min.js"></script>
-<script src="js/lib/main.js"></script>
+<script src="{{ MEDIA_URL }}js/lib/jquery-1.7.min.js"></script>
+<script src="{{ MEDIA_URL }}js/lib/main.js"></script>
 <!--[if !IE 7]>
 	<style type="text/css">
 		#wrap {display:table;height:100%}
@@ -38,10 +38,10 @@
             <div id="main-nav">
                 <ul>
                     <li id="selected">        
-                        <a href="index.html">Hosted Meals</a>
+                        <a href="/experiences/">Hosted Meals</a>
                     </li>
                     <li id="#">        
-                        <a href="homemade_takeout.html">Homemade Takeout</a>
+                        <a href="/experiences/home%20takeout/">Homemade Takeout</a>
                     </li>
                 </ul>
             </div><!-- close main-nav -->
