Fix for 'by category'

--- a/xperiences/templates/base.html
+++ b/xperiences/templates/base.html
@@ -37,11 +37,11 @@
         <div id="main-nav-bg">
             <div id="main-nav">
                 <ul>
-                    <li id="selected">        
+                    <li {% if not category %}id="selected"{% endif %}>
                         <a href="/experiences/">Hosted Meals</a>
                     </li>
-                    <li id="#">        
-                        <a href="/experiences/home%20takeout/">Homemade Takeout</a>
+                    <li {% if category %}id="selected"{% endif %}>        
+                        <a href="{% url experiences.views.experience_by_category category='homemade takeout'%}">Homemade Takeout</a>
                     </li>
                 </ul>
             </div><!-- close main-nav -->
