--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -6,6 +6,7 @@
 html, body {
     font-family: proxima-nova, Droid Sans, helvetica, sans-serif;
     font-size: 12px;
+	line-height: 1.3;
 /*    background: #e8dcc9 url(../images/bg.png) repeat-x; */
     background: #fdf4e5;
     height: 100%;
@@ -263,15 +264,15 @@ article#main-content .primary {
 #exp-thumbs {
 	overflow: hidden;
 	position: relative;
-	margin-top: 10px;
+	margin-top: 6px;
 }
 
 .exp-thumbs-img {
 	width: 70px;
 	height: 70px;
 	cursor: pointer;
-	padding: 5px;
-	margin-right: 5px;
+	border: 3px solid white;
+	margin-right: 2px;
 }
 
 .primary #exp-thumbs ul {
