--- a/xperiences/templates/base.html
+++ b/xperiences/templates/base.html
@@ -12,8 +12,20 @@
 		#wrap {display:table;height:100%}
 	</style>
 <![endif]-->
-{% block extra_head %} <!-- where is this extra_head coming from??-->
-{% endblock %}
+<!-- Google Analytics -->
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-27207596-1']);
+  _gaq.push(['_setDomainName', '.neighborlymeals.com']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 </head>
 
 <body>
