added link to merchant's photo in experience profile. There is no URL field to experience. Still need to find out how to create it and link to experience from the homepage.

--- a/xperiences/experiences/templates/experiences/experience_profile.html
+++ b/xperiences/experiences/templates/experiences/experience_profile.html
@@ -146,7 +146,7 @@
                 <div id="merchant-image">
                     <a title={{ merchant.name }} href="{% url merchant_profile merchant.id %}">
                         <div class="image-wrapper">
-                            <img width="100" height="100" alt="{{ merchant.name }}" src="{{ MEDIA_URL }}/images/joseph.jpg">
+                            <img width="100" height="100" alt="{{ merchant.name }}" src="{{merchant.photo.url}}">
                         </div>            
                     </a>
                 </div>
