limited number of experience per page to 9. Trying to understand why 'delivery' shows on hosted meals / home page. Fixed bug with broken link under the logo.

--- a/xperiences/templates/base.html
+++ b/xperiences/templates/base.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li>
                         <!--https://my_dev_xpr_uploads.s3.amazonaws.com/photos/logo.png-->
-                        <a href="index.html" id="logo">
+                        <a href="/" id="logo">
                             <img width="312" height="59" alt="neighborly-meals" src="{{ MEDIA_URL }}images/logo.png">
                         </a>
                     </li>
