added about us page and changed the stylesheet accordingly.

--- a/xperiences/templates/base.html
+++ b/xperiences/templates/base.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/reset.css" type="text/css" media="screen, print" /> 
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" type="text/css" media="screen, print" /> 
-<title>{% block title %}Book meals with people from around your city. Learn new dishes and share with your friends. Order homemade takeout.!{% endblock %}</title>
+<title>{% block title %}Book meals with people from around the world. Learn new dishes and share with your friends. Order homemade takeout.{% endblock %}</title>
 <script src="{{ MEDIA_URL }}js/lib/jquery-1.7.min.js"></script>
 <script src="{{ MEDIA_URL }}js/lib/main.js"></script>
 <!--[if !IE 7]>
@@ -72,7 +72,7 @@
             <p id="copy">&copy; 2011 Neighborly Meals</p>
             <ul class="footer-nav">
                 <li>
-                    <a title="About" href="#">About</a>
+                    <a title="About" href="/about.html">About</a>
                 </li>
                 <!--<li>
                     <a title="Careers" href="#">Careers</a>
