--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -6,8 +6,7 @@
 html, body {
     font-family: proxima-nova, Droid Sans, helvetica, sans-serif;
     font-size: 12px;
-	line-height: 1.3;
-/*    background: #e8dcc9 url(../images/bg.png) repeat-x; */
+    line-height: 1.3;
     background: #fdf4e5;
     height: 100%;
 }
@@ -75,12 +74,12 @@ header#header {
 }
 
 @font-face {
-    font-family: 'MenschBold';
-    src: url('mensch-bold-wf.eot');
-    src: url('mensch-bold-wf.eot?#iefix') format('embedded-opentype'),
-         url('mensch-bold-wf.woff') format('woff'),
-         url('mensch-bold-wf.ttf') format('truetype'),
-         url('mensch-bold-wf.svg#MenschMenschBold') format('svg');
+    font-family: 'MenschRegular';
+    src: url('mensch-wf.eot');
+    src: url('mensch-wf.eot?#iefix') format('embedded-opentype'),
+         url('mensch-wf.woff') format('woff'),
+         url('mensch-wf.ttf') format('truetype'),
+         url('mensch-wf.svg#MenschMenschRegular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -90,7 +89,7 @@ header#header {
     margin-left: 65px;
     padding-top: 5px;
     color: #fdf4e5;
-    font-family: MenschBold, helvetica, san-sarif;   
+    font-family: MenschRegular, helvetica, san-sarif;   
 }
 
 #top-banner li:last-child h3 {
@@ -540,3 +539,47 @@ a.button {
 #review-body p {
     padding: 5px;
 }
+
+
+
+/*------------------------------------------------------------------------------*/
+/*	ABOUT
+/*------------------------------------------------------------------------------*/
+
+article#about-content {
+    font-size: 14px;
+    line-height: 1.5;
+    padding: 10px;
+    padding-right: 50px;
+    padding-bottom: 20px;
+    
+    
+}
+
+#t-shirt-blurb {
+    margin-top: 10px;
+    border-top: #E8DCC9 solid 3px;
+    padding-top: 10px;
+}
+
+#feed-the-movement-blurb {
+    margin-top: 10px;
+    border-top: #E8DCC9 solid 3px;
+    padding-top: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
